# stocklens

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/agents/: architect.md  devops.md  engineer.md  frontend.md  orchestrator.md  product-manager.md  reviewer.md
.github/skills/: alert-patterns.md  api-design.md  architecture-patterns.md  caching-strategy.md  clean-architecture.md  clean-code.md  code-quality-tools.md  code-review.md  data-modeling.md  design-patterns.md  docker-compose-patterns.md  documentation-standards.md  event-driven-patterns.md  factor-engineering.md  factor-research.md  gitops.md  grafana-provisioning.md  investment-analysis.md  observability.md  performance-testing.md  postgres-patterns.md  requirements-management.md  risk-management.md  scoring-model.md  security.md  stock-data-sources.md  test-driven-development.md
.github/workflows/: ci.yml  mobile-build.yml  mobile-ci.yml  web-ci.yml
backend/app/: main.py
backend/app/alerts/: energy.py
backend/app/api/: auth.py  dependencies.py
backend/app/common/: config.py  types.py
backend/app/ingestion/: energy_ingest.py  entsoe_client.py  us_ingest.py  yfinance_client.py
backend/app/jobs/: scheduler.py
backend/app/normalization/: energy_price.py  price.py
backend/app/storage/: repository.py
backend/app/tools/: create_api_key.py
db/migrations/: 002_energy_schema.sql  004_energy_interval_schema.sql  005_api_key.sql
db/seeds/: 002_energy_regions.sql
decisions/: 006-domain-config-yaml.md  007-api-key-auth.md  008-web-shell-nextjs.md  009-mobile-shell-expo.md  010-eas-build-pipeline.md
docs/: PLAN.md
docs/risks/: risk-register.md
docs/user/: api-reference.md  architecture.md  data-sources.md  getting-started.md  index.md  operations.md
grafana/dashboards/: energy.json
grafana/provisioning/dashboards/: dashboards.yml
grafana/provisioning/datasources/: postgres.yml
mobile/: .env.example  .gitignore  README.md  app.config.ts  app.json  eas.json  package-lock.json  package.json
mobile/app/: _layout.tsx  alerts.tsx  cheap-intervals.tsx  index.tsx
mobile/src/lib/: api.ts  domain.ts  format.ts
tests/: conftest.py
tests/integration/: test_energy_schema.py  test_us_ingest.py
tests/unit/: conftest.py  test_assets_api.py  test_auth.py  test_energy_alerts.py  test_energy_api.py  test_energy_ingest.py  test_energy_normalization.py  test_entsoe_client.py  test_health_api.py  test_price_normalization.py  test_scheduler.py
web/: .env.example  .gitignore  README.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/components/: ErrorPanel.tsx  PriceChart.tsx
web/src/lib/: api.ts  domain.ts  format.ts
(+5 files in other folders)
