[project]
name = "stocklens"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.32.1",
    "asyncpg==0.30.0",
    "pydantic==2.10.3",
    "pydantic-settings==2.7.0",
    "apscheduler==3.10.4",
    "yfinance==0.2.50",
    "pandas>=2.3.2",
    "pandas-ta>=0.3.14b0",
    "fredapi==0.5.2",
    "finnhub-python==2.4.20",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "pytest-cov==6.0.0",
    "httpx==0.28.1",
    "respx==0.21.1",
    "freezegun==1.5.1",
    "ruff==0.8.6",
    "mypy==1.14.0",
    "bandit==1.8.0",
    "radon==6.0.1",
    "pip-audit==2.7.3",
    "pip-licenses==5.0.0",
    "asyncpg-stubs==0.30.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend/app"]

[dependency-groups]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "pytest-cov==6.0.0",
    "httpx==0.28.1",
    "respx==0.21.1",
    "freezegun==1.5.1",
    "ruff==0.8.6",
    "mypy==1.14.0",
    "bandit==1.8.0",
    "radon==6.0.1",
    "pip-audit==2.7.3",
    "pip-licenses==5.0.0",
    "asyncpg-stubs==0.30.0",
    "mkdocs-material>=9.5",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",  # line length handled by formatter
    "B008",  # FastAPI Query/Depends in function defaults is the intended pattern
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = false
disallow_untyped_defs = true
disallow_any_generics = true
warn_return_any = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
# Packages that have no stubs or py.typed marker — suppress both
# import-not-found (pre-commit env) and import-untyped (local env) silently.
module = [
    "yfinance",
    "apscheduler",
    "apscheduler.*",
    "pandas_ta",
    "fredapi",
    "finnhub",
]
ignore_missing_imports = true

[tool.bandit]
skips = ["B101"]   # allow assert in tests
severity = "HIGH"
confidence = "HIGH"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
source = ["app"]
omit = ["tests/*", "*/migrations/*", "*/__init__.py"]
